--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   name             : "Ganesh Shahane"
   pronouns         : # example: "she/her"  
   bio              : "AI and Physics driven Drug Discovery"
-  location         : "London"
+  location         : "London, UK"
   #employer         : "Red Brick University"
   uri              : # URL
   email            : "ganesh7shahane@gmail.com" 
