--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile6.png"
+  avatar           : "profile.png"
   name             : "Ganesh Shahane"
   pronouns         : # example: "she/her"  
   bio              : "AI and Physics driven Drug Discovery"
