--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Computational Chemist's Bible"
 title_separator          : "-"
 name                     : &name "Ganesh Shahane"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ganesh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ganesh7shahane/ganesh.github.io"
 
@@ -22,7 +22,7 @@ repository               : "ganesh7shahane/ganesh.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Ganesh Shahane"
+  name             : "Ganesh Shahane, PhD"
   pronouns         : # example: "she/her"  
   bio              : "AI and Physics driven Drug Discovery"
   location         : "London, UK"
