--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ganesh7shahane/ganesh.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "/images/profile.png"
   name             : "Ganesh Shahane, PhD"
   pronouns         : # example: "she/her"  
   bio              : "AI and Physics driven Drug Discovery"
