--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Computational Chemist's Bible"
 title_separator          : "-"
 name                     : &name "Ganesh Shahane"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ganesh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ganesh7shahane/ganesh.github.io"
 
@@ -21,7 +21,7 @@ repository               : "ganesh7shahane/ganesh.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "/images/profile.png"
   name             : "Ganesh Shahane, PhD"
   pronouns         : # example: "she/her"  
   bio              : "AI and Physics driven Drug Discovery"
